# battery

./: .gitignore  README.md
code/: CMakeLists.txt
code/batterylib/: CMakeLists.txt
code/batterylib/include/: AABB.h  BICGSTABGPU.h  BVH.h  BatteryLib.h  BatteryLibDef.h  ConvexPolyhedron.h  DataPtr.h  DiffusionSolver.h  Ellipsoid.h  GLGlobal.h  Geometry.h  GeometryIO.h  GeometryObject.h  Intersection.h  JacobiSolver.h  MGGPU.h  MGGPU_Types.h  MultigridGPU.h  MultigridSolver.h  OrientationHistogram.h  ParticlePacking.h  PrimitiveTypes.h  RandomGenerator.h  SAP.h  SimulatedAnnealing.h  Solver.h  Timer.h  Transform.h  Triangle.h  TriangleMesh.h  Types.h  Volume.h  VolumeGenerator.h  VolumeIO.h  VolumeMeasures.h  VolumeRasterization.h  VolumeSegmentation.h  VolumeSurface.h
code/batterylib/src/: BICGSTABGPU.cpp  BVH.cpp  ConvexPolyhedron.cpp  DataPtr.cpp  DiffusionSolver - Copy.cpp  DiffusionSolver.cpp  Ellipsoid.cpp  GLGlobal.cpp  GeometryIO.cpp  GeometryObject.cpp  Intersection.cpp  MGGPU.cpp  MGGPU.cpp~RF636e83f5.TMP  MultigridGPU.cpp  MultigridSolver.cpp  OrientationHistogram.cpp  ParticlePacking.cpp  RandomGenerator.cpp  SAP.cpp  SimulatedAnnealing.cpp  Transform.cpp  Triangle.cpp  TriangleMesh.cpp  Volume.cpp  VolumeGenerator.cpp  VolumeIO.cpp  VolumeMeasures.cpp  VolumeRasterization.cpp  VolumeSegmentation.cpp  VolumeSurface.cpp
code/batterylib/src/cuda/: CudaUtility.cpp  CudaUtility.h  LinearSys.cu  LinearSys.cuh  MGGPU.cu  MGGPU.cuh  MGGPU_Types.cuh  MultigridGPU.cu  MultigridGPU.cuh  MultigridGPUNew.cu  MultigridGPUNew.cuh  Volume.cu  Volume.cuh  VolumeCCL.cu  VolumeCCL.cuh  VolumeRasterization.cu  VolumeRasterization.cuh  VolumeSurface.cu  VolumeSurface.cuh  VolumeTypes.cuh
code/batterytool/: CMakeLists.txt
code/batterytool/src/: main.cpp
code/batteryviz/: CMakeLists.txt
code/batteryviz/src/: App.cpp  App.h  BatteryApp.cpp  BatteryApp.h  Ui.cpp  Ui.h  Volume.h  Volume.h_  main.cpp
code/batteryviz/src/render/: Camera.cpp  Camera.h  Framebuffer.h  GLError.cpp  GLError.h  GLGlobal.cpp  GLGlobal.h  GLRenderer.cpp  GLRenderer.h  MeshObject.cpp  MeshObject.h  PrimitivesVBO.cpp  PrimitivesVBO.h  RenderList.cpp  RenderList.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderResource.cpp  ShaderResource.h  Shaders.cpp  Shaders.h  Texture.cpp  VertexBuffer.cpp  VertexBuffer.h  VolumeRaycaster.cpp  VolumeRaycaster.h
code/batteryviz/src/shaders/: architecture  forwardphong.shader  p.1  position.shader  volume.shader  volumeraycast.shader  volumeslice.shader
code/batteryviz/src/utility/: IOUtility.cpp  IOUtility.h  Options.cpp  Options.cpp_  Options.h  RandomGenerator.cpp  RandomGenerator.h  mathtypes.h
code/matlab/: Paulsen.matlab  cmpfipy.m  convTest.m  diffTest.m  linIndex.m  matrixTest.m  plotPoly.m  sampleNeumann.m  tauplot.m
code/matlab/ellipsoid_generation/: ELLIPSOIDS.txt  GenerateDataset_1.m  GenerateDataset_2.m  GenerateDataset_3.m  GenerateDataset_4.m  GenerateDataset_5.m  Main_Program.m  MarchDollase.m  README.md  write_file.m
code/matlab/ellipsoid_generation/Functions/: GenerateMarchDollase.m  apres_collision.m  apres_cube.m  avancer.m  check_update.m  collision_rate.m  creer_partenaire.m  ellipse_droite.m  ellipsoid_surface_area.m  fraction_volumique.m  generate_volume.m  generer.m  initialiser.m  initialiser2.m  interaction.m  interne_externe.m  matrice.m  matrice_static.m  minimum.m  minimum_static.m  opposer.m  permuter.m  polynome.m  prochain_evenement.m  quadratique_plan.m  sortie_cube.m  sortie_rate.m  tracer.m  tracer2.m  update_evenement.m  verification.m  verifier_collision.m  verifier_sortie.m
code/python/: binToTif.py  compareSolvers.py  convertTiff.py  fipyInstall.txt  myTortuosity_v0.csv  runMyTortuosity.py  runPosFiles.py  tortuosityCalculatorTest.py  tortuosityCalculatorX.py
data/: process.pptx
data/graphite/SL43_C5_1c5bar_Data/: SL43_C5_1c5bar0001.tif  SL43_C5_1c5bar0002.tif  SL43_C5_1c5bar0003.tif  SL43_C5_1c5bar0004.tif  SL43_C5_1c5bar0005.tif  SL43_C5_1c5bar0006.tif  SL43_C5_1c5bar0007.tif  SL43_C5_1c5bar0008.tif  SL43_C5_1c5bar0009.tif  SL43_C5_1c5bar0010.tif  SL43_C5_1c5bar0011.tif  SL43_C5_1c5bar0012.tif  SL43_C5_1c5bar0013.tif  SL43_C5_1c5bar0014.tif  SL43_C5_1c5bar0015.tif  SL43_C5_1c5bar0016.tif  SL43_C5_1c5bar0017.tif  SL43_C5_1c5bar0018.tif  SL43_C5_1c5bar0019.tif  SL43_C5_1c5bar0020.tif  SL43_C5_1c5bar0021.tif  SL43_C5_1c5bar0022.tif  SL43_C5_1c5bar0023.tif  SL43_C5_1c5bar0024.tif  SL43_C5_1c5bar0025.tif  SL43_C5_1c5bar0026.tif  SL43_C5_1c5bar0027.tif  SL43_C5_1c5bar0028.tif  SL43_C5_1c5bar0029.tif  SL43_C5_1c5bar0030.tif  SL43_C5_1c5bar0031.tif  SL43_C5_1c5bar0032.tif  SL43_C5_1c5bar0033.tif  SL43_C5_1c5bar0034.tif  SL43_C5_1c5bar0035.tif  SL43_C5_1c5bar0036.tif  SL43_C5_1c5bar0037.tif  SL43_C5_1c5bar0038.tif  SL43_C5_1c5bar0039.tif  SL43_C5_1c5bar0040.tif  (+144 more)
data/graphiteSections/: GraphiteTortuosityData.xlsx
data/graphiteSections/SL43_C5_1c5bar_Data/SL43_C5_1c5bar_section001/: SL43_C5_1c5bar_section001_0000.tiff  SL43_C5_1c5bar_section001_0001.tiff  SL43_C5_1c5bar_section001_0002.tiff  SL43_C5_1c5bar_section001_0003.tiff  SL43_C5_1c5bar_section001_0004.tiff  SL43_C5_1c5bar_section001_0005.tiff  SL43_C5_1c5bar_section001_0006.tiff  SL43_C5_1c5bar_section001_0007.tiff  SL43_C5_1c5bar_section001_0008.tiff  SL43_C5_1c5bar_section001_0009.tiff  SL43_C5_1c5bar_section001_0010.tiff  SL43_C5_1c5bar_section001_0011.tiff  SL43_C5_1c5bar_section001_0012.tiff  SL43_C5_1c5bar_section001_0013.tiff  SL43_C5_1c5bar_section001_0014.tiff  SL43_C5_1c5bar_section001_0015.tiff  SL43_C5_1c5bar_section001_0016.tiff  SL43_C5_1c5bar_section001_0017.tiff  SL43_C5_1c5bar_section001_0018.tiff  SL43_C5_1c5bar_section001_0019.tiff  SL43_C5_1c5bar_section001_0020.tiff  SL43_C5_1c5bar_section001_0021.tiff  SL43_C5_1c5bar_section001_0022.tiff  (+161 more)
data/particles/: C3.txt
data/results/Feb2018/: readme.txt
data/results/performance/: performance_multigrid.xlsx
related/Battery/: kickoff-yale.pptx
related/Battery/MRD/: L6-Volume_Fractions-2Feb16.pptx  refinement parameters3.ppt
related/TextureSynthesis/: Kopf2007_summary.txt
(+39 files in other folders)
